validator接口参数校验完善及Swagger接口文档完善
